# kite_ros

./: .gitignore  README.md
.docs/: examples.md  home.md
chait_companions/: CMakeLists.txt  package.xml
chait_companions/include/chait_companions/: common.h  drone_companion.h  drone_manager.h
chait_companions/src/: drone_companion.cpp  drone_manager.cpp
chait_control/: CMakeLists.txt  package.xml
chait_control/include/chait_control/: chait_control.h  data_types.h  math.h  position_control.h  quadrotor_tlee_control.h  trajectory.h
chait_description/: CMakeLists.txt  package.xml
chait_description/models/CHAIT_TMP_MDL/: model.config  model.sdf
chait_description/models/falcon/: model.config  model.sdf
chait_description/scripts/: chait_create_model.py  model_generator.py
chait_description/worlds/: simple_world.world
chait_gazebo_plugins/: CMakeLists.txt  package.xml
chait_gazebo_plugins/include/chait_gazebo_plugins/: chait_gazebo_plugin.h  chait_quadrotor_plugin.h  common.h
chait_gazebo_plugins/src/: chait_gazebo_plugin.cpp  chait_quadrotor_plugin.cpp
chait_msgs/: CMakeLists.txt  package.xml
chait_msgs/msg/: QCommand.msg  QCommandStamped.msg
chait_offboard/: CMakeLists.txt  package.xml
chait_offboard/scripts/: pub_cmd_position.py  pub_cmd_thrust.py
chait_sim/: CMakeLists.txt  package.xml
chait_sim/launch/: spawn_sdf.launch
kite_companions/: CMakeLists.txt  package.xml
kite_companions/include/kite_companions/: common.h  drone_companion.h  drone_manager.h  timer.h
kite_companions/launch/: drone_companion_node.launch
kite_companions/src/: drone_companion.cpp  drone_manager.cpp
kite_companions/src/nodes/: drone_companion_node.cpp
kite_control/: CMakeLists.txt  package.xml
kite_control/include/kite_control/: data_types.h  kite_control.h  math.h  position_control.h  quadrotor_tlee_control.h  trajectory.h
kite_description/: CMakeLists.txt  package.xml
kite_description/models/CHAIT_TMP_MDL/: model.sdf
kite_description/models/KITE_TMP_MDL/: model.config  model.sdf
kite_description/models/falcon/: model.sdf
kite_description/models/falcon_cs_payload/: model.config  model.sdf
kite_description/scripts/: chait_create_model.py  kite_create_model.py  model_generator.py  sdf_generator.py
kite_gazebo_plugins/: CMakeLists.txt  package.xml
kite_gazebo_plugins/include/kite_gazebo_plugins/: common.h  kite_gazebo_plugin.h  kite_quadrotor_payload_plugin.h  kite_quadrotor_plugin.h
kite_gazebo_plugins/src/: kite_gazebo_plugin.cpp  kite_quadrotor_payload_plugin.cpp  kite_quadrotor_plugin.cpp
kite_msgs/: CMakeLists.txt  package.xml
kite_msgs/msg/: QCommand.msg  QCommandStamped.msg
kite_offboard/: CMakeLists.txt  package.xml
kite_offboard/scripts/: pub_cmd_position.py  pub_cmd_thrust.py
kite_sim/: CMakeLists.txt  package.xml
kite_sim/launch/: spawn_sdf.launch
