<?xml version="1.0"?>
<package format="2">
  <name>kite_description</name>
  <version>0.0.0</version>
  <description>The kite_description package</description>

  <maintainer email="prasanth.kotaru@gmail.com">vkotaru</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
